.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Schedule__c.object
<CustomObject>
    <description>This object represents a single day in a collection schedule</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Capacity_Reached__c</fullName>
        <description>Whether capacity has been reached for this schedule record.</description>
        <formula>IF(Incap311__Capacity__c &gt; Incap311__Item_Count__c, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Capacity__c</fullName>
        <label>Capacity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Day_of_Week__c</fullName>
        <formula>CASE(
  MOD(Incap311__Schedule_Date__c - DATE(1900, 1, 7), 7),
  0, &quot;Sunday&quot;,
  1, &quot;Monday&quot;,
  2, &quot;Tuesday&quot;,
  3, &quot;Wednesday&quot;,
  4, &quot;Thursday&quot;,
  5, &quot;Friday&quot;,
  &quot;Saturday&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Item_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of items currently schedule to be picked up</description>
        <label>Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__No_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates no collection service for this schedule date</description>
        <label>No Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Number_of_Service_Requests__c</fullName>
        <label>Number of Service Requests</label>
        <summaryForeignKey>Incap311__Service_Request_Schedule__c.Incap311__Schedule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Incap311__Schedule_Date__c</fullName>
        <description>The date this schedule record is used to manage collection for</description>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incap311__Schedule_Override_Date__c</fullName>
        <description>A date field to contain the alternate schedule date if necessary.</description>
        <label>Schedule Override Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The service type for the schedule.</description>
        <label>Service Type</label>
        <referenceTo>Incap311__Service_Type__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Zone__c</fullName>
        <label>Zone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Schedule</label>
    <listViews>
        <fullName>Incap311__All</fullName>
        <columns>NAME</columns>
        <columns>Incap311__Service_Type__c</columns>
        <columns>Incap311__Schedule_Date__c</columns>
        <columns>Incap311__Day_of_Week__c</columns>
        <columns>Incap311__No_Service__c</columns>
        <columns>Incap311__Schedule_Override_Date__c</columns>
        <columns>Incap311__Zone__c</columns>
        <columns>Incap311__Capacity__c</columns>
        <columns>Incap311__Item_Count__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCH-{00000000}</displayFormat>
        <label>Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>